# PaySmart-Agent

paysmart_agent/: .env  .gitignore  README.md  credentials_base64.txt  db.sqlite3  manage.py  pivotal-biplane-449212-h1-00d0bf2270dc.json  pivotal-biplane-449212-h1-23436cf3cc98.json  pivotal-biplane-449212-h1-2d1e6963a523.json  pivotal-biplane-449212-h1-49b9344961e2.json  pivotal-biplane-449212-h1-4b2e4fc251a2.json  pyproject.toml  requirements.txt  temp_audio_RQR3W12.m4a
paysmart_agent/api/: serializers.py  urls.py  utils.py  views.py
paysmart_agent/paysmart_agent/: asgi.py  settings.py  urls.py  wsgi.py
paysmart_agente/: db.sqlite3  manage.py  requirements.txt
paysmart_agente/agent/: urls.py  utils.py
paysmart_agente/agent/infrastructure/audio_converter/: convert_m4a_to_wav.py
paysmart_agente/agent/infrastructure/gemini_adapter/: init_gemini.py  start_chat.py
paysmart_agente/agent/infrastructure/google_speech_to_text/: transcribe_audio.py
paysmart_agente/agent/infrastructure/google_text_to_speech/: synthesize_text.py
paysmart_agente/agent/infrastructure/google_translator/: translate_text.py
paysmart_agente/agent/infrastructure/nestjs_adapter/: tv_payment.py
paysmart_agente/agent/interface_adapters/: serializers.py
paysmart_agente/agent/presentation/: chat_translation_view.py  chat_view.py  config.py  voice_chat_view.py
paysmart_agente/agent/usecases/: process_chat_message.py  process_chat_translation.py  process_tv_payment_request.py  process_voice_chat.py
paysmart_agente/paysmart_agente/: asgi.py  settings.py  urls.py  wsgi.py
