[tool-poetry]
name = "paysmart-agent"
version = "0.1.0"
description = "Paysmart Agent Backend"
authors = [
    {name = "VincentBanda010",email = "vincentbanda010@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependancies]
python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
